feat(search box): Created search box that filters data

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600;800&display=swap');
 
 * {
@@ -23,8 +22,6 @@ ul {
   width: 95%;
 }
 
-
-
 header {
   text-align: center;
 	display: flex;
@@ -41,8 +38,6 @@ header h2 {
   letter-spacing: 2px;
 	margin-bottom: 25px;
 }
-
-
 
 .student-search {
   display: flex;
@@ -75,8 +70,6 @@ header h2 {
 .student-search button img {
   width: 25px;
 }
-
-
 
 .student-list {
   display: grid;
@@ -140,8 +133,6 @@ header h2 {
   margin-top: 1.1em;
 }
 
-
-
 .pagination {
   margin: 30px 0 60px;
   text-align: center;
@@ -171,7 +162,6 @@ header h2 {
   color: #fff;
 }
 
-
 .student-search span {
   position: absolute;
   clip: rect(1px, 1px, 1px, 1px);
@@ -181,8 +171,6 @@ header h2 {
   width: 1px;
   overflow: hidden;
 }
-
-
 
 .no-results {
 	font-family: 'Nunito', sans-serif;
@@ -194,7 +182,11 @@ header h2 {
 	margin-bottom: 15px;
 }
 
-
+.searchText{
+  font-weight: bold;
+  color: #4a5568;
+  margin-right: 10px;
+}
 
 @media screen and (min-width: 700px) {
 
